--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "current-processes": "^0.2.1",
+    "jsdom": "^16.4.0",
+    "loadsh": "0.0.4",
     "node-xlsx": "^0.15.0"
   }
 }
